--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -6,7 +6,7 @@
 
       <div class="container-fluid home_page" >
 
-        <div class="row">
+        <div class="row navbar_wrapper">
             <div class="col-12 navbar_container"></div>
         </div>
 
