--- a/views/user/layout/about/mission.ejs
+++ b/views/user/layout/about/mission.ejs
@@ -2,9 +2,9 @@
 
     <div class="row about_row">
 
-        <div class="col-3 mobile-col-1"></div>
+        <div class="col-3 mobile-col-1 about_us_divider"></div>
 
-        <div class="col-6 mobile-col-10">
+        <div class="col-6 mobile-col-10 about_us_col">
             <p class="about_title "> Our Mission </p>
             <p class="about_description">
               Our mission is to revolutionize the facility services industry by fostering a team of people who care about the local community and are passionate about the customer.
