--- a/views/user/layout/about/values.ejs
+++ b/views/user/layout/about/values.ejs
@@ -7,7 +7,7 @@
 
         <div class="value_inner_row row ">
 
-            <div class="col-3 value_col">
+            <div class="col-3 value_col value_col-inner">
 
                 <div class="value_box">
 
@@ -27,7 +27,7 @@
 
             </div>
 
-            <div class="col-3 value_col">
+            <div class="col-3 value_col  value_col-inner">
 
 
                 <div class="value_box">
@@ -45,7 +45,7 @@
 
             </div>
 
-            <div class="col-3 value_col">
+            <div class="col-3 value_col  value_col-inner">
 
 
                 <div class="value_box">
@@ -63,7 +63,7 @@
 
             </div>
 
-            <div class="col-3 value_col">
+            <div class="col-3 value_col  value_col-inner">
 
                 <div class="value_box">
 
