--- a/views/user/layout/home/about.ejs
+++ b/views/user/layout/home/about.ejs
@@ -1,6 +1,6 @@
 <div class="row about_us_row">
 
-    <div class="col-5 mobile-col-12">
+    <div class="col-5 mobile-col-12 about_us_col">
 
         <div class="margin-bottom-small">
 
@@ -51,9 +51,9 @@
 
     </div>
 
-    <div class="col-1"></div>
+    <div class="col-1 no_col"></div>
 
-    <div class="col-6 desktop_only margin-top-10">
+    <div class="col-6 desktop_only margin-top-10 about_us_col">
 
         <div class="about_us_overlay_box"></div>
 
