--- a/public/assets/css/showcase.css
+++ b/public/assets/css/showcase.css
@@ -168,6 +168,9 @@ span{
     width: 100%;
     margin-top: 0%;
 }
+.showcase_text_text_container {
+    margin-left: 0%; 
+}
   .banners {
     margin-top: 27.5% !important;
     width: 100%;
