--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -4,7 +4,7 @@ html{
 .about_container{
   position: relative;
   padding-bottom:5%;
-  padding-top:5%;
+  margin-top:5%;
   text-align: justify !important;
 }
 
@@ -54,7 +54,7 @@ padding-bottom:10%;
 .value_box_subtitle{
   font-family:"Montserrat";
   font-weight: 400;
-  font-size:1.6rem;
+  font-size:1.3rem;
   text-align: justify;
   display: inline-block;
   margin-top:5%;
@@ -102,7 +102,7 @@ a:hover{
   pointer-events: none;
 }
 .what_we_do_col{
-   padding-left:2.5%;
+   padding-left:5%;
 }
 
 .what_we_do_title{
@@ -124,8 +124,9 @@ a:hover{
 }
 .what_we_do_description{
   color:white ;
-  text-align:justify;
+  text-align:left;
   font-size: 2rem;
+  width:120%;
    padding-top:5%;
    font-family: "Montserrat";
    font-weight: 300;
@@ -148,7 +149,7 @@ a:hover{
   font-weight: 400;
   color:white;
   padding-top:5%;
-  font-size:3rem;
+  font-size:2.2rem;
   text-align: center;
 
 }
