--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -161,6 +161,9 @@ a:hover{
 }
 
 @media screen and (max-width:680px){
+.banners{
+  margin-top:20% !important
+}
 
 
 .value_divide{
@@ -186,8 +189,8 @@ a:hover{
 
   .what_we_do_description{
     font-size: 1.8rem;
-    text-align: left;
-    width:100%;
+    text-align: justify;
+    width:80%;
     font-family: "Montserrat";
 
   }
@@ -207,9 +210,11 @@ a:hover{
   }
   .about_container{
     padding:10% 0;
-    margin-top:7.5% !important;
+    margin-top:5% !important;
   }
-
+.value_box_subtitle{
+      font-size: 1.8rem !important
+}
   .about_description{
     text-align: justify;
   }
@@ -276,11 +281,13 @@ a:hover{
   .about_link_row{
     margin-top:15%;
   }
-
+.showcase_container {
+  background-position: -50% !important
+}
   .what_we_do_container{
     margin-top:0%;
-    height:120vh !important;
-    background-image: linear-gradient(to right,rgba(0, 35, 50, 1),rgba(0, 35, 50, 1),rgba(0, 35, 50, 1),rgba(0, 35, 50, .8),rgba(0, 35, 50, .7)),url("./../images/what_we_do_new.png");
+    height:150vh !important;
+    background-image: linear-gradient(to right,rgba(0, 35, 50, 1),rgba(0, 35, 50, 1),rgba(0, 35, 50, 1),rgba(0, 35, 50, .9),rgba(0, 35, 50, .7)),url("./../images/what_we_do_new.png");
   }
   .what_we_do_link {
     font-size: 2rem !important;
@@ -304,6 +311,7 @@ a:hover{
     padding-top: 15%;
     text-align: justify !important;
 }
+
   .what_we_do_col{
     width:75% !important;
     max-width:75% !important;
@@ -311,9 +319,27 @@ a:hover{
     margin-left: 5%;
 
   }
-  .what_we_do_container{
-        background-image: linear-gradient(to right,rgba(0, 35, 50, 1),rgba(0, 35, 50, 1),rgba(0, 35, 50, 1),rgba(0, 35, 50, .7),rgba(0, 35, 50, .7)),url(./../images/what_we_do_new.png);
-  }
+.brs{
+  margin-top:7.5%;
+}
+.about_us_col--2{
+  visibility: hidden;
+}
+.our_clients_text_banner{
+  width: 50% !important;
+background: none !important;
+font-size: 6rem !important;
+padding-left: 10% !important;
+border-bottom: 1px solid white;
+}
+.about_us_banner{
+    width:90% !important;
+    margin-left:5%;
+    background: none !important;
+    font-size: 6rem !important;
+    border-bottom: 1.5px solid white;
+
+}
   .value_col-inner{
     width:50% !important;
     max-width:50% !important;
@@ -324,6 +350,10 @@ a:hover{
     width:8.33% !important;
     max-width:8.33% !important;
     flex:8.33% !important;
+  }
+  .what_we_do_container{
+    background-position: center;
+    background-image:linear-gradient(to right,rgba(0, 35, 50, 1),rgba(0, 35, 50, 1),rgba(0, 35, 50, 1),rgba(0, 35, 50, .4)),url('./../images/what_we_do_new.png') !important
   }
 }
 
