--- a/views/user/layout/home/about.ejs
+++ b/views/user/layout/home/about.ejs
@@ -45,15 +45,15 @@
 
         <% } %>
 
-        <div class="about_us_button light-navy-shadow background-00 ">
+        <!-- <div class="about_us_button light-navy-shadow background-00 ">
             <p class="about_us_link ">Learn More About Us!</p>
-        </div>
+        </div> -->
 
     </div>
 
     <div class="col-1 no_col"></div>
 
-    <div class="col-6 desktop_only margin-top-10 about_us_col">
+    <div class="col-6 desktop_only margin-top-10 about_us_col about_us_col--2">
 
         <div class="about_us_overlay_box"></div>
 
