--- a/views/user/layout/new_our_clients.ejs
+++ b/views/user/layout/new_our_clients.ejs
@@ -63,7 +63,7 @@
 
       <div class="row our_client_buttons">
           <div class="col-4 bcl"></div>
-          <div class="col-4">
+          <div class="col-4 buttons_t">
                 <div class="button_col_our_clients">
 
                         <div class="our_client_button our_client_button--1 our_client_active_buttton"button_num="0"></div>
