--- a/views/user/layout/new_showcase.ejs
+++ b/views/user/layout/new_showcase.ejs
@@ -19,8 +19,8 @@
         <div class="showcase_text_text_container">
           <h1 class="cfs-heading-container">
                 <span class="cfs-heading cfs-heading-1"style="color:#38B6FF"><%= showcase.heading_1 %></span>
-                <div style="margin-top:5%"></div>
-                <br />
+                <div class="brs"></div>
+
                 <span class="cfs-heading cfs-heading-2">
                 <%= showcase.heading_2 %>
                 </span>
